# robot_control_software

./: README.md  documentation.html  my_robot_calibration.yaml
agiprobot_measurement/: CMakeLists.txt  package.xml  setup.py
agiprobot_measurement/benchmark_results/: execution_plan_objectA_wuerfel_rho_-05_solver_IP_basic_angels_around_boresight_12.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_basic_angels_around_boresight_3.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_basic_angels_around_boresight_6.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_basic_angels_around_boresight_9.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_time_angels_around_boresight_12.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_time_angels_around_boresight_3.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_time_angels_around_boresight_6.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_time_angels_around_boresight_9.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_uncertainty_angels_around_boresight_12.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_uncertainty_angels_around_boresight_3.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_uncertainty_angels_around_boresight_6.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_IP_uncertainty_angels_around_boresight_9.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_greedy_angels_around_boresight_12.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_greedy_angels_around_boresight_3.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_greedy_angels_around_boresight_6.yaml  execution_plan_objectA_wuerfel_rho_-05_solver_greedy_angels_around_boresight_9.yaml  execution_plan_objectA_wuerfel_rho_005_solver_IP_basic_angels_around_boresight_12.yaml  (+44 more)
agiprobot_measurement/doc/: Makefile  Usage_Guide.rst  (+7 more)
coppeliasim_interface/: CMakeLists.txt  package.xml
fixture/: CMakeLists.txt  package.xml
launcher/: package.xml
planner_discrete/: CMakeLists.txt  package.xml  setup.py
trajectory_planning/: .~lock.Quick_start.odt#  CMakeLists.txt  Quick_start.odt  package.xml
trajectory_planning/launch/: planning_execution_rviz.launch  trajectory_planning.launch
trajectory_planning/src/: moveit_execution.cpp  object_position.cpp  trajectory_path.cpp  zivid_camera_temp.cpp
tscan_control/: CMakeLists.txt  package.xml
(+228 files in other folders)
